# Laboratorio-1-EDA

./: .gitignore  README  mazo y jugador modificado.cpp  mazo y jugador.cpp  planificacion funcion de probabilidades.docx
src/: CMakeLists.txt  Funcion_de_Probabilidades.c  SConstruct  apuesta.c  apuesta.cpp  apuesta.h  ascii.c  ascii.h  carta.h  display.c  display.h  entrada.c  entrada.h  funcion_probabilidades.c  funcion_probabilidades.h  getch.c  getch.h  jugador.c  jugador.h  log_factorial.c  log_factorial.h  mazo.c  mazo.h  menu.c  menu.h  mesa.h  modo_apoyo.c  modo_apoyo.h  modo_practica.c  modo_practica.h  strip_poker.c
